# bioseq-toolkit

./: .gitignore  Basic_DNA_Analysis.py  README.md  pyproject.toml
docs/: api.md  architecture.md  roadmap.md
docs/decisions/: 0001-domain-model.md  0002-parser-architecture.md
src/bioseq_toolkit/: __init__.py  comparison.py  sequence.py  transcription.py
src/bioseq_toolkit/core/: annotation.py  enums.py  exceptions.py  sequence.py
src/bioseq_toolkit/io/: detect.py
src/bioseq_toolkit/models/: restriction_site.py  sequence.py
src/bioseq_toolkit/parsers/: fasta.py  genbank.py  parser.py
src/bioseq_toolkit/serializers/: fasta.py  genbank.py
src/bioseq_toolkit/utils/: gc.py
tests/: test_comparison.py  test_dna_sequence.py  test_sequence.py  test_stream_io.py  test_transcription.py  test_verification.py
tests/data/: circular.gb  example.fasta  example.gb  linear.fa  plasmid.gb
