[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bioseq-toolkit"
version = "0.1.0"
description = "A Python toolkit for basic biological sequence analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yeshwanth Bhadriraju" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]